--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         python --version
         python -m pip install --upgrade pip
         python -m pip install --upgrade poetry coveralls
-        poetry install
+        poetry install --extras cloudscraper
     - name: Test with pytest
       run: |
         poetry run pytest --cov-report term-missing --cov=garpyclient tests/
