--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "garpyclient"
 version = "0.1.0"
-description = "Python client for downloading activities from Garmin Connect"
+description = "Basic library for authenticating and querying Garmin Connect"
 authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
 license = "MIT"
 readme = "README.md"
